--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <div class="orange-breakline"></div>
 <div class="information-line">
     <div class="download-info">
-    <i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icons"></i><h3>Very Fast</h3><p>Download & Play</p>
+    <i class="line-icons download-icon fa-solid fa-cloud-arrow-down fa-4x"></i><h3>Very Fast</h3><p>Download & Play</p>
     </div>
     <div class="privacy-info">
-    <i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icons"></i><h3>Protected Privacy</h3><p>We value your privacy</p>
+    <i class="line-icons privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x"></i><h3>Protected Privacy</h3><p>We value your privacy</p>
     </div>
     <div class="customersupport-info">
-    <i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icons"></i><h3>Customer Support</h3><p>We are here to help you</p>
+    <i class="line-icons customersupport-icon fa-regular fa-comments fa-4x"></i><h3>Customer Support</h3><p>We are here to help you</p>
     </div>
 </div>
 <div class="orange-breakline"></div>
@@ -55,6 +55,7 @@
 <section>
     <div class="community-container">
         <div class="community-info">
+        <h2>Be a part of our community</h2>
         <p>Join our growing community of gamers!</p>
         <p>Over 100.000 players online!</p>
         <p>We have a community discord for gamers!</p>
@@ -63,14 +64,25 @@
    
     </div>
 </section>
+<section class="featured-games">
+    <h2>Featured Games</h2>
+    <div class="featured-container">
+        <a href="product-page.html">
+        <img src="images/GameHub_covers.jpg"  alt="game hub covers" class="featured-img" id="featured-image1">
+        </a>
+        <a href="product-page.html">
+        <img src="images/GameHub_covers5.jpg" alt="game hub covers" class="featured-img" id="featured-image2">
+        </a>
+        <a href="product-page.html">
+        <img src="images/GameHub_covers7.jpg" alt="game hub covers" class="featured-img" id="featured-image3">
+        </a>
+        <a href="product-page.html">
+        <img src="images/GameHub_covers9.jpg" alt="game hub covers" class="featured-img" id="featured-image4">
+        </a>
+    </div>
+</section>
+    
 
-
-<ul class="carousel">
-    <li class="item"><img src="images/GameHub_covers.jpg" alt="game hub covers" class="carousel-img"></li>
-    <li class="item"><img src="images/GameHub_covers5.jpg" alt="game hub covers" class="carousel-img"></li>
-    <li class="item"><img src="images/GameHub_covers7.jpg" alt="game hub covers" class="carousel-img"></li>
-    <li class="item"><img src="images/GameHub_covers9.jpg" alt="game hub covers" class="carousel-img"></li>
-</ul>
 </main> 
 <footer>
     <div class="logo">
@@ -114,7 +126,6 @@
                 <li><a href="#">Payment Options</a></li>
             </ul>
         </div>
-    </div>    
     </div>
     <p class="copyright"><span>&copy;</span> 2023 GameHub, All rights reserved.</p>   
 </footer>
