Responsive feedback section
Made the feedback section responsive.

--- a/index.html
+++ b/index.html
@@ -36,21 +36,36 @@
     </form>
     </div>
 </div>
+<section class="trending-games">
+    <h2>Trending</h2>
+    <div class="trending-container">
+        <a href="product-page.html">
+            <img src="images/GameHub_covers5.jpg" alt="Trending games" class="featured-img">
+        </a>
+        <a href="product-page.html">
+            <img src="images/GameHub_covers10.jpg" alt="Trending games" class="featured-img">
+        </a>
+        <a href="product-page.html">
+            <img src="images/GameHub_covers4.jpg" alt="Trending games" class="featured-img">
+        </a>
+        <a href="product-page.html">
+            <img src="images/GameHub_covers3.jpg" alt="Trending games" class="featured-img">
+        </a>
+    </div>
+</section>
 
 
-<div class="orange-breakline"></div>
 <div class="information-line">
     <div class="download-info">
-    <i class="line-icons download-icon fa-solid fa-cloud-arrow-down fa-4x"></i><h3>Very Fast</h3><p>Download & Play</p>
+    <i class="download-icon fa-solid fa-cloud-arrow-down fa-4x" id="line-icon1"></i><h3>Very Fast</h3><p>Download & Play</p>
     </div>
     <div class="privacy-info">
-    <i class="line-icons privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x"></i><h3>Protected Privacy</h3><p>We value your privacy</p>
+    <i class="privacy-icon fa-sharp fa-solid fa-shield-halved fa-4x" id="line-icon2"></i><h3>Protected Privacy</h3><p>We value your privacy</p>
     </div>
     <div class="customersupport-info">
-    <i class="line-icons customersupport-icon fa-regular fa-comments fa-4x"></i><h3>Customer Support</h3><p>We are here to help you</p>
+    <i class="customersupport-icon fa-regular fa-comments fa-4x" id="line-icon3"></i><h3>Customer Support</h3><p>We are here to help you</p>
     </div>
 </div>
-<div class="orange-breakline"></div>
 
 <section>
     <div class="community-container">
@@ -65,9 +80,9 @@
     </div>
 </section>
 <section class="featured-games">
-    <h2>Featured Games</h2>
+    <h2>Featured</h2>
     <div class="featured-container">
-        <a href="product-page.html">
+        <a href="product-page.html">  
         <img src="images/GameHub_covers.jpg"  alt="game hub covers" class="featured-img" id="featured-image1">
         </a>
         <a href="product-page.html">
@@ -81,8 +96,58 @@
         </a>
     </div>
 </section>
+<div class="featured-feedback">
+    <div class="feedback-info">
+    <img src="images/feedback-img.png" class="featured-feedback-img" alt="Featured feedback from customer">
+        <div class="featured-feedback"><span class="featured-rating" id="rating-stars">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+        <p>GameHub is the best place to buy games! You can tell right away how valued we are as a customer.</p>
+        <p>Also one more positive thing is that GameHub is an avid supporter of E-sports!</p>
+        <p>Aaron, Content Creator and GameHub partner.</p>
+        </div>
+    </div>
+</div>
+<section class="user-feedback">
+    <h2>Customer Feedback</h2>
+    <div class="feedback-container">
+    <div class="userfeedback-container">
+            <div class="rating">&#9733;&#9733;&#9733;&#9733;&#9734;
+            </div>
+            <a href="product-page.html" class="rating-link">Game: Racing</a>
+            <div class="rating-description">
+                Had some issues to begin with but customer service helped me quick!
+            </div>
+            <h5>2 hours ago</h5>
+    </div>
+    <div class="userfeedback-container">
+            <div class="rating">&#9733;&#9733;&#9733;&#9733;&#9733;
+            </div>
+            <a href="product-page.html" class="rating-link">Game: Cyberpunk</a>
+            <div class="rating-description">
+                Perfect! 10/10! So easy to shop and game downloads right away.
+            </div>
+            <h5>7 hours ago</h5>
+    </div>
+    <div class="userfeedback-container">
+            <div class="rating">&#9733;&#9733;&#9733;&#9733;&#9733;
+            </div>
+            <a href="product-page.html" class="rating-link">Game: Forge Legend</a>
+            <div class="rating-description">
+                Great game! Theres hours and hours of gameplay.
+            </div>
+            <h5>15 hours ago</h5>
+    </div>
+    <div class="userfeedback-container">
+            <div class="rating">&#9733;&#9733;&#9733;&#9733;&#9733;
+            </div>
+            <a href="product-page.html" class="rating-link">Game: Space War</a>
+            <div class="rating-description">
+                Games are great, community is great. Everything is great!
+            </div>
+            <h5>23 hours ago</h5>
+    </div>
+</div>
+</section>
     
-
 </main> 
 <footer>
     <div class="logo">
