Changes for mobile
Additional changes to make site more mobile friendly.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 <section class="trending-games">
-    <h2>Trending</h2>
+    <h2>Trending Games</h2>
     <div class="trending-container">
         <a href="product-page.html">
             <img src="images/GameHub_covers5.jpg" alt="Trending games" class="featured-img">
@@ -80,7 +80,7 @@
     </div>
 </section>
 <section class="featured-games">
-    <h2>Featured</h2>
+    <h2>Featured Games</h2>
     <div class="featured-container">
         <a href="product-page.html">  
         <img src="images/GameHub_covers.jpg"  alt="game hub covers" class="featured-img" id="featured-image1">
@@ -114,7 +114,7 @@
             </div>
             <a href="product-page.html" class="rating-link">Game: Racing</a>
             <div class="rating-description">
-                Had some issues to begin with but customer service helped me quick!
+            Had some issues to begin with but customer service helped me!
             </div>
             <h5>2 hours ago</h5>
     </div>
