--- a/index.html
+++ b/index.html
@@ -41,16 +41,21 @@
     <div class="trending-container">
         <a href="product-page.html">
             <img src="images/GameHub_covers5.jpg" alt="Trending games" class="featured-img">
+            <div class="title-description">Assassin - $49</div>
         </a>
         <a href="product-page.html">
             <img src="images/GameHub_covers10.jpg" alt="Trending games" class="featured-img">
+            <div class="title-description">Forge Legend - $49</div>
         </a>
         <a href="product-page.html">
             <img src="images/GameHub_covers4.jpg" alt="Trending games" class="featured-img">
+            <div class="title-description">Furious - $49</div>
         </a>
         <a href="product-page.html">
             <img src="images/GameHub_covers3.jpg" alt="Trending games" class="featured-img">
+            <div class="title-description">Black - $49</div>
         </a>
+        
     </div>
 </section>
 
@@ -70,7 +75,7 @@
 <section>
     <div class="community-container">
         <div class="community-info">
-        <h2>Be a part of our community</h2>
+        <h2>Join our community!</h2>
         <p>Join our growing community of gamers!</p>
         <p>Over 100.000 players online!</p>
         <p>We have a community discord for gamers!</p>
@@ -80,21 +85,26 @@
     </div>
 </section>
 <section class="featured-games">
-    <h2>Featured Games</h2>
+    <h2>Bestsellers</h2>
     <div class="featured-container">
         <a href="product-page.html">  
         <img src="images/GameHub_covers.jpg"  alt="game hub covers" class="featured-img" id="featured-image1">
+        <div class="title-description">Ping Pong - $49</div>
         </a>
         <a href="product-page.html">
         <img src="images/GameHub_covers5.jpg" alt="game hub covers" class="featured-img" id="featured-image2">
+        <div class="title-description">Assassin - $49</div>
         </a>
         <a href="product-page.html">
         <img src="images/GameHub_covers7.jpg" alt="game hub covers" class="featured-img" id="featured-image3">
+        <div class="title-description">Racing - $49</div>
         </a>
         <a href="product-page.html">
         <img src="images/GameHub_covers9.jpg" alt="game hub covers" class="featured-img" id="featured-image4">
+        <div class="title-description">Cyberpunk - $49</div>
         </a>
     </div>
+    
 </section>
 <div class="featured-feedback">
     <div class="feedback-info">
