--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="cta-info">
     <h1>Assassin</h1>
     <h2>$49</h2>
-    <form action="/product-page.html">
+    <form action="./product-page.html">
         <button type="submit" class="buy-btn">Buy now!</button>
     </form>
     </div>
