--- a/product-page.html
+++ b/product-page.html
@@ -38,7 +38,7 @@
 
     <div class="purchase-options">
     <button class="cart-btn">Add to cart</button>
-    <form action="/view-cart.html">
+    <form action="./view-cart.html">
     <input type="submit" value="Buy" class="buy-btn">
     </form>
     <h2>$49</h2>
