--- a/payment-options.html
+++ b/payment-options.html
@@ -29,8 +29,8 @@
 <section class="paymentinfo">
     <div class="paymentinfo-container">
 <div class="progressbar-payment">    
-    <a href="view-cart.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
-    <a href="index.html"><i class="fa-solid fa-xmark" id="x-mark"></i></a>
+    <a href="/view-cart.html"><i class="fa-solid fa-arrow-left" id="arrow-left"></i></a>
+    <a href="/index.html"><i class="fa-solid fa-xmark" id="x-mark"></i></a>
     <h1>Make Payment</h1>
     <div class="one">1</div>
     <div class="orangeline"></div>
@@ -71,7 +71,7 @@
         <i class="fa-solid fa-building-columns"></i> Bank Transfer  
     </div>
 </div>
-    <form action="/payment-info.html">
+    <form action="./payment-info.html">
         <input type="submit" value="Home" class="payment-btn">
     </form>
 </div>
