--- a/contactus-confirm.html
+++ b/contactus-confirm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Confirm sent message to customer service">
-    <title>GameHub | Contact</title>
+    <title>GameHub | Message Sent</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Monomaniac+One&family=Montserrat:wght@100;400;500;700&family=Saira:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
@@ -16,14 +16,14 @@
 </head>
 <body>
     <header>
-        <input type="checkbox" id="nav-checkbox">
-        <label for="nav-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="nav-checkbox" aria-label="Open the menu">
+        <label for="nav-checkbox" class="hamburger-icon" aria-label="Menu for mobile users"><i class="fas fa-bars"></i></label>
         <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="view-cart.html" aria-label="Cart"><i class="fa-solid fa-cart-shopping"></i></a>
         </nav>
     </header>
 <main>
@@ -42,7 +42,7 @@
     <hr>
     <div class="footer-row">
         <div class="footer-column">
-            <h4>Information</h4>
+            <h2 class="footer-h2">Information</h2>
             <ul>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Our Services</a></li>
@@ -51,7 +51,7 @@
             </ul>
         </div>
         <div class="footer-column">
-            <h4>Get Help</h4>
+            <h2 class="footer-h2">Get Help</h2>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Shipping</a></li>
@@ -60,7 +60,7 @@
             </ul>
         </div>
         <div class="footer-column">
-        <h4>Shopping</h4>
+        <h2 class="footer-h2">Shopping</h2>
             <ul>
                 <li><a href="#">Play Station Games</a></li>
                 <li><a href="#">PC Games</a></li>
@@ -69,7 +69,7 @@
             </ul>
         </div>
         <div class="footer-column">
-        <h4>Get Help</h4>
+        <h2 class="footer-h2">Get Help</h2>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Shipping</a></li>
