--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 <section class="trending-games">
-    <h2>Trending Games</h2>
+    <h2 class="h2-heading">Trending Games</h2>
     <div class="trending-container">
         <a href="product-page.html">
             <img src="images/GameHub_covers5.jpg" alt="Assassin - Trending right now" class="featured-img">
@@ -85,7 +85,7 @@
     </div>
 </section>
 <section class="featured-games">
-    <h2>Bestsellers</h2>
+    <h2 class="h2-heading">Bestsellers</h2>
     <div class="featured-container">
         <a href="product-page.html">  
         <img src="images/GameHub_covers.jpg"  alt="Bestseller right now: Ping Pong Championship" class="featured-img" id="featured-image1">
@@ -117,7 +117,7 @@
     </div>
 </div>
 <section class="user-feedback">
-    <h2>Customer Feedback</h2>
+    <h2 class="h2-heading">Customer Feedback</h2>
     <div class="feedback-container">
     <div class="userfeedback-container">
             <div class="rating">&#9733;&#9733;&#9733;&#9733;&#9734;
