--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
 <main>
 
 
-    <h1>List of games</h1>
+    <h1 class="h2-heading">List of games</h1>
 <section>
     <div class="product-container">
         <div class="game game-1"><a href="product-page.html"><img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="productImage">
