--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     <hr>
     <div class="footer-row">
         <div class="footer-column">
-            <h4>Information</h4>
+            <h2 class="footer-h2">Information</h2>
             <ul>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Our Services</a></li>
@@ -90,7 +90,7 @@
             </ul>
         </div>
         <div class="footer-column">
-            <h4>Get Help</h4>
+            <h2 class="footer-h2">Get Help</h2>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Shipping</a></li>
@@ -99,7 +99,7 @@
             </ul>
         </div>
         <div class="footer-column">
-        <h4>Shopping</h4>
+        <h2 class="footer-h2">Shopping</h2>
             <ul>
                 <li><a href="#">Play Station Games</a></li>
                 <li><a href="#">PC Games</a></li>
@@ -108,7 +108,7 @@
             </ul>
         </div>
         <div class="footer-column">
-        <h4>Get Help</h4>
+        <h2 class="footer-h2">Get Help</h2>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Shipping</a></li>
