--- a/view-cart.html
+++ b/view-cart.html
@@ -73,13 +73,10 @@
     <div class="discount-amount">Discount $0</div>
     <div class="totalamount-checkout">Total $49</div>
     <div class="checkoutline"></div>
-    <form action="/payment-options.html">
+    <form action="./payment-options.html">
     <button type="submit" class="checkout-btn">Checkout</button>
     </form>
 </div>
-
-
-
  </main>   
  <footer>
     <div class="logo">
@@ -88,7 +85,7 @@
     <hr>
     <div class="footer-row">
         <div class="footer-column">
-            <h4>Information</h4>
+            <h2 class="footer-h2">Information</h2>
             <ul>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Our Services</a></li>
@@ -97,7 +94,7 @@
             </ul>
         </div>
         <div class="footer-column">
-            <h4>Get Help</h4>
+            <h2 class="footer-h2">Get Help</h2>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Shipping</a></li>
@@ -106,7 +103,7 @@
             </ul>
         </div>
         <div class="footer-column">
-        <h4>Shopping</h4>
+        <h2 class="footer-h2">Shopping</h2>
             <ul>
                 <li><a href="#">Play Station Games</a></li>
                 <li><a href="#">PC Games</a></li>
@@ -115,7 +112,7 @@
             </ul>
         </div>
         <div class="footer-column">
-        <h4>Get Help</h4>
+        <h2 class="footer-h2">Get Help</h2>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Shipping</a></li>
