Fix #2 Products page
Attempting another button fix

--- a/about.html
+++ b/about.html
@@ -43,12 +43,10 @@
 
     <section class="second-section">
         <div class="general-info">
-            <h2>Fast, Reliable & Easy</h2>
+            <h2>Gaming Partners & Content Creators</h2>
             <div class="p-bg">
-            <p>Instant Download.</p>
-            <p>All privacy information is protected.</p>
-            <p>Easy and straightforward shopping experience.</p>
-            <p>24/7 Support here to assist you.</p>
+            <p>We promote streamers, content creators and want to help grow their communities</p>
+            <p>GameHub will host events together with our gaming partners wich will offer rewards when you engage in their content/stream</p>
             </div>
         </div>
     </section>
@@ -64,7 +62,6 @@
    
     <section class="fourth-section">
         <div class="esport-info">
-            
             <h2>We believe in E-Sports</h2>
             <div class="p-bg">
             <p>We support the E-sport scene!</p>
