Adjusting and deleting
Adjusted an image in the Customer Feedback section.

Deleted unused images.

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <h2>Sell your games back to us</h2>
     <p>Here at GameHub you can sell your game back to us at a reduced price after you are done playing it with the game digital key.</p>
     <p>This way you get to buy different games at an affordable price while also supporting its developers!</p>
-    <p>You can check out the games we currently offer <a href="/products.html" class="games-link">here.</a></p>
+    <p>You can check out the games we currently offer <a href="./products.html" class="games-link">here.</a></p>
 
     <h2>We love E-Sports</h2>
     <p>GameHub is an active supporter and sponsor of several major E-sport events.</p>
